Fix alignment of pie chart.
  * Firefox was showing the pie chart header mis-aligned.

--- a/app/dashboard/static/css/linaro-base-1.0.13.css
+++ b/app/dashboard/static/css/linaro-base-1.0.13.css
@@ -24,6 +24,9 @@ body {
 #success-cell, #fail-cell, #unknown-cell {
     cursor: pointer;
 }
+.pie-chart {
+    margin: 0 auto;
+}
 .pie-chart td {
     text-align: center;
     width: 25px;
